--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
     <h2>Figures</h2>
     <h3>Weather Analysis</h3>
     <figure>
-        <img src="WeatherPy/Output/LatitudeMaxTemperature.png"
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeMaxTemperature.png"
             alt="Latitude vs. Max Temperature">
         <figcaption>Scatter plot comparing city latitude and maximum temperature</figcaption>
     </figure>
     <figure>
-        <img src="WeatherPy/Output/LatitudeHumidity.png"
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeHumidity.png"
             alt="Latitude vs. Humidity">
         <figcaption>Scatter plot comparing city latitude and humidity</figcaption>
     </figure>
     <figure>
-        <img src="WeatherPy/Output/LatitudeCloudiness.png"
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeCloudiness.png"
             alt="Latitude vs. Cloudiness">
         <figcaption>Scatter plot comparing city latitude and cloudiness</figcaption>
     </figure>
     <figure>
-        <img src="WeatherPy/Output/LatitudeWindSpeed.png"
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeWindSpeed.png"
             alt="Latitude vs. Wind Speed">
         <figcaption>Scatter plot comapring city latitude and wind speed</figcaption>
     </figure>
     <h3>Heatmaps</h3>
     <figure>
-        <img src="VacationPy/Heatmaps/HeatmapMarkers.png"
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/VacationPy/Heatmaps/HeatmapMarkers.PNG"
             alt="Heatmap with Markers">
         <figcaption>Heatmap of hotels at locations with ideal weather conditions</figcaption>
     </figure>
