--- a/index.html
+++ b/index.html
@@ -27,24 +27,29 @@
     <h2>Figures</h2>
     <h3>Weather Analysis</h3>
     <figure>
-        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeMaxTemperature.png" alt="Latitude vs. Max Temperature">
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeMaxTemperature.png?raw=true"
+            alt="Latitude vs. Max Temperature">
         <figcaption>Scatter plot comparing city latitude and maximum temperature</figcaption>
     </figure>
     <figure>
-        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeHumidity.png" alt="Latitude vs. Humidity">
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeHumidity.png?raw=true"
+            alt="Latitude vs. Humidity">
         <figcaption>Scatter plot comparing city latitude and humidity</figcaption>
     </figure>
     <figure>
-        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeCloudiness.png" alt="Latitude vs. Cloudiness">
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeCloudiness.png?raw=true"
+            alt="Latitude vs. Cloudiness">
         <figcaption>Scatter plot comparing city latitude and cloudiness</figcaption>
     </figure>
     <figure>
-        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeWindSpeed.png" alt="Latitude vs. Wind Speed">
-        <figcaption>Scatter plot comapring city latitude and wind speed</figcaption>
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/WeatherPy/Output/LatitudeWindSpeed.png?raw=true"
+            alt="Latitude vs. Wind Speed">
+        <figcaption>Scatter plot comparing city latitude and wind speed</figcaption>
     </figure>
     <h3>Heatmaps</h3>
     <figure>
-        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/VacationPy/Heatmaps/HeatmapMarkers.PNG" alt="Heatmap with Markers">
+        <img src="https://github.com/sbowe1/Python-API-Challenge/blob/main/VacationPy/Heatmaps/HeatmapMarkers.PNG?raw=true"
+            alt="Heatmap with Markers">
         <figcaption>Heatmap of hotels at locations with ideal weather conditions</figcaption>
     </figure>
     </section>
